Fix background behind spring list on profile pages.

--- a/scss/colours.scss
+++ b/scss/colours.scss
@@ -53,9 +53,13 @@ $header_gradient_stop: bottom;
         padding-left: 30px;
         padding-right: 30px;
 
-        h1, h2, h3, h4, h5 {
+        ul, h1, h2, h3, h4, h5 {
             margin: 0px;
             padding: 0px 0px 1em 0px;
+        }
+
+        ul {
+            margin-left: 2em;
         }
     }
 }
